--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+
     tools:context="com.huashukang.demoapp.MainActivity">
+
+    <include layout="@layout/toolbar" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -60,4 +62,4 @@
         android:layout_alignLeft="@+id/edit_bednumber"
         android:layout_alignStart="@+id/edit_bednumber" />
 
-</RelativeLayout>
+</LinearLayout>
