--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -30,7 +30,7 @@
                 android:text="床位号"
                 android:layout_width="match_parent"
                 android:textSize="20dp"
-                android:textColor="#DD000000"
+                android:textColor="@color/colorPrimary"
                 android:background="@drawable/btn_click_black_havebackground"
                 />
 
@@ -38,12 +38,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
+                android:text="姓名"
                 android:id="@+id/textView"
+                android:layout_marginTop="37dp"
+                android:textColor="@color/cardview_dark_background"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="82dp" />
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
         </RelativeLayout>
 
     </RelativeLayout>
