--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.huashukang.demoapp.widget.SlidingButtonView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:background="@android:color/white"
     android:layout_marginBottom="1dp"
     >
@@ -30,11 +30,7 @@
                 android:text="床位号"
                 android:layout_width="match_parent"
                 android:textSize="20dp"
-<<<<<<< HEAD
                 android:textColor="@color/colorPrimary"
-=======
-                android:textColor="#DD000000"
->>>>>>> 8242ccc... add many
                 android:background="@drawable/btn_click_black_havebackground"
                 />
 
@@ -42,7 +38,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-<<<<<<< HEAD
                 android:text="姓名"
                 android:id="@+id/textView"
                 android:layout_marginTop="37dp"
@@ -50,14 +45,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
-=======
-                android:text="Small Text"
-                android:id="@+id/textView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="82dp" />
->>>>>>> 8242ccc... add many
         </RelativeLayout>
 
     </RelativeLayout>
