--- a/app/src/main/res/menu/menu_user_add.xml
+++ b/app/src/main/res/menu/menu_user_add.xml
@@ -1,12 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
+
     <item
         android:id="@+id/item_add_mesure"
         android:title="完成"
         android:orderInCategory="80"
+        app:showAsAction="always|withText"/>
 
-        app:showAsAction="always|withText"
-        ></item>
 </menu>
