--- a/app/src/main/res/layout/activity_user_detail_acitivity.xml
+++ b/app/src/main/res/layout/activity_user_detail_acitivity.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
+            android:background="@null"
             android:id="@+id/edt_id"
             android:layout_weight="1" />
     </LinearLayout>
@@ -58,6 +59,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
+            android:background="@null"
             android:id="@+id/edt_bedno"
             android:layout_weight="1" />
     </LinearLayout>
@@ -84,6 +86,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/edt_name"
+            android:background="@null"
             android:layout_weight="1" />
     </LinearLayout>
 
