--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -23,7 +23,8 @@
         <RelativeLayout
             android:id="@+id/layout_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp">
             <TextView
                 android:id="@+id/text"
                 android:layout_height="match_parent"
