--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:title="TEST"
+    app:title="Title"
     app:titleTextColor="#fff"
     android:background="?attr/colorPrimary"
     android:minHeight="?attr/actionBarSize"
