--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,21 +12,29 @@
     <include layout="@layout/toolbar" />
 
 
-    <Button
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="患者登记"
-        android:onClick="userManage"
-        android:id="@+id/btn_usermanage" />
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal|center_vertical"
+        >
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="照片采集"
-        android:id="@+id/btn_bedseatmange"
-        android:onClick="bedseatManage"
-        android:layout_alignBottom="@+id/btn_usermanage"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="患者登记"
+            android:onClick="userManage"
+            android:id="@+id/btn_usermanage" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="照片采集"
+            android:id="@+id/btn_bedseatmange"
+            android:onClick="bedseatManage"
+            android:layout_alignBottom="@+id/btn_usermanage"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </LinearLayout>
 
 </LinearLayout>
