--- a/app/src/main/res/menu/menu_user_list.xml
+++ b/app/src/main/res/menu/menu_user_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/item_add"
         android:title="添加数据"
         android:orderInCategory="80"
-        android:icon="@mipmap/ico_add"
+        android:icon="@mipmap/iconfont_add"
         app:showAsAction="always|withText"
         ></item>
 </menu>
