--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:title="Title"
+    app:logo="@mipmap/logo"
     app:titleTextColor="#fff"
     android:background="?attr/colorPrimary"
     android:minHeight="?attr/actionBarSize"
