--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -8,7 +8,7 @@
     <include layout="@layout/toolbar"/>
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.huashukang.demoapp.UserListActivity"
+    tools:context="com.huashukang.picgrab.activity.UserListActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:overScrollMode="never"
