--- a/app/src/main/res/layout/activity_choosepic.xml
+++ b/app/src/main/res/layout/activity_choosepic.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
+    <include layout="@layout/toolbar" />
     <GridView
         android:id="@+id/id_gridView"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@android:color/transparent"
