--- a/app/src/main/res/layout/activity_login_or.xml
+++ b/app/src/main/res/layout/activity_login_or.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/bg_login"
     android:padding="15dp"
-    tools:context="com.huashukang.demoapp.LoginActivity">
+    tools:context="com.huashukang.picgrab.activity.LoginActivity">
 
     <LinearLayout
         android:gravity="center_vertical|center_horizontal"
