--- a/app/src/main/res/layout/activity_user_add.xml
+++ b/app/src/main/res/layout/activity_user_add.xml
@@ -6,7 +6,7 @@
 
     android:orientation="vertical"
 
-    tools:context="com.huashukang.demoapp.UserAddActivity">
+    tools:context="com.huashukang.picgrab.activity.UserAddActivity">
 <include layout="@layout/toolbar"/>
     <LinearLayout
         android:layout_margin="1dp"
