--- a/app/src/main/res/layout/content_user_detail_acitivity.xml
+++ b/app/src/main/res/layout/content_user_detail_acitivity.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.huashukang.demoapp.UserDetailAcitivity"
+    tools:context="com.huashukang.picgrab.activity.UserDetailAcitivity"
     tools:showIn="@layout/activity_user_detail_acitivity">
 
 </RelativeLayout>
