--- a/app/src/main/res/layout/list_dir_item.xml
+++ b/app/src/main/res/layout/list_dir_item.xml
@@ -30,6 +30,7 @@
             android:id="@+id/id_dir_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
             android:text="所有图片"
             android:textSize="10sp" />
 
