--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 
-    tools:context="com.huashukang.demoapp.MainActivity">
+    tools:context="com.huashukang.picgrab.activity.MainActivity">
 
     <include layout="@layout/toolbar" />
 
