--- a/app/src/main/res/layout/activity_bed_list_acitivity.xml
+++ b/app/src/main/res/layout/activity_bed_list_acitivity.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+    android:onClick="dismisspop"
     tools:context="com.huashukang.picgrab.activity.BedListAcitivity">
 <include layout="@layout/toolbar"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/bed_list_id"
         android:divider="#ffff0000"
         android:dividerHeight="10dp"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        />
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
+
 
 </LinearLayout>
