--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,17 +21,18 @@
 
         <Button
             android:drawableTop="@mipmap/iconfont_iimmunizations"
-            android:layout_width="wrap_content"
+            android:layout_width="126dp"
             android:layout_height="wrap_content"
             android:text="患者登记"
             android:padding="5dp"
-            android:layout_margin="15dp"
+            android:layout_margin="20dp"
             android:background="@color/cardview_light_background"
             android:onClick="userManage"
-            android:id="@+id/btn_usermanage" />
+            android:id="@+id/btn_usermanage"
+            android:layout_gravity="center_horizontal" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="126dp"
             android:layout_height="wrap_content"
             android:text="人像采集"
             android:background="@color/cardview_light_background"
@@ -41,22 +42,24 @@
             android:onClick="bedseatManage"
             android:layout_alignBottom="@+id/btn_usermanage"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_margin="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="126dp"
             android:layout_height="wrap_content"
             android:text="图片上传"
             android:background="@color/cardview_light_background"
             android:padding="5dp"
-
-            android:layout_margin="15dp"
-            android:drawableTop="@mipmap/iconfont_upload"
+            android:drawableTop="@mipmap/iconfont_shangchuan"
             android:id="@+id/btn_upload"
             android:onClick="imgUpload"
             android:layout_alignBottom="@+id/btn_usermanage"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_margin="15dp"
+            android:textColor="@color/abc_search_url_text_pressed"
+             />
     </LinearLayout>
 
 </LinearLayout>
