--- a/app/src/main/res/layout/item_bed.xml
+++ b/app/src/main/res/layout/item_bed.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:background="#44ff0000"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center"
-    >
+    android:gravity="center">
+
     <TextView
         android:id="@+id/bed_number"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textSize="30dp"
-        android:gravity="center_vertical"
-        />
+        android:gravity="center_vertical" />
+
     <TextView
         android:id="@+id/bed_name"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textSize="15dp"
         android:gravity="center_vertical"
-        android:layout_below="@+id/bed_number"
-        />
+        android:layout_below="@+id/bed_number" />
 
 </LinearLayout>
